# try-flask

./: README.md  pyproject.toml
try_flask/: main.py
try_flask/templates/: hello.html
