[tool.poetry]
name = "try-flask"
version = "0.1.0"
description = ""
authors = ["Naoya Furudono <naoya-furudono@pepabo.com>"]
readme = "README.md"
packages = [{include = "try_flask"}]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
